Added Ministries sub pages
Added a few new pages. Had to delete DB again to add ministries back in.

--- a/CalvaryOpebBibleWebsite/Views/Shared/_Layoutnav.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Shared/_Layoutnav.cshtml
@@ -60,17 +60,17 @@
                         <li style="height: 83px;">
                             @Html.ActionLink("Ministries", "Index", "Ministries")
                             <ul class="nav navbar-nav navbar navbar-inverse" style="margin-top: -17px; width:650px; padding-left: 15px;">
-                                <li><a href="#">High School</a></li>
-                                <li><a href="#">Middle School</a></li>
-                                <li><a href="#">Children</a></li>
+                                <li><a href="~/Ministries/HighSchool">High School</a></li>
+                                <li><a href="~/Ministries/MiddleSchool">Middle School</a></li>
+                                <li><a href="~/Ministries/Children">Children</a></li>
                                 <li>
                                     <a href="#" style=" height: 51px;">Community Groups</a>
                                     <ul class="nav navbar-nav navbar navbar-inverse" style="margin-top: 51px; padding-left: 15px; width: 200px;">
-                                        <li><a href="#">College</a></li>
-                                        <li><a href="#">Adults</a></li>
+                                        <li><a href="~/Ministries/College/">College</a></li>
+                                        <li><a href="~/Ministries/Adults/">Adults</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="#">Seniors</a></li>
+                                <li><a href="~/Ministries/Seniors/">Seniors</a></li>
                             </ul>
                         </li>
                         <li style="height: 83px;">
