--- a/CalvaryOpebBibleWebsite/Views/Ministries/College.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Ministries/College.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<CalvaryOpebBibleWebsite.Models.Ministries>
+﻿
+@model IEnumerable<CalvaryOpebBibleWebsite.Models.MinistriesViewModel>
 
 @{
     ViewBag.Title = "College";
