--- a/CalvaryOpebBibleWebsite/Views/Ministries/Adults.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Ministries/Adults.cshtml
@@ -1,10 +1,9 @@
 ﻿@model IEnumerable<CalvaryOpebBibleWebsite.Models.Ministries>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Adults";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
 <div class="jumbotron">
     <h2>Ministry Leaders</h2>
     <div style="width:25%; padding-top:5%;">
@@ -15,7 +14,7 @@
             {
                 <tr>
                     <th>
-                       Ministry Leader
+                        Ministry Leader:
                     </th>
                 </tr>
                 <tr>
@@ -23,7 +22,7 @@
                         @Html.DisplayFor(modelItem => item.MinistriesLeader)
                     </td>
                 </tr>
-              
+
                 <tr>
                     <td>
                         @Html.DisplayFor(modelItem => item.MinistriesPosition)
