--- a/CalvaryOpebBibleWebsite/Views/Images/Create.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Images/Create.cshtml
@@ -3,20 +3,52 @@
     ViewBag.Title = "Create";
 }
 <div class="jumbotron">
-    <h2>Create</h2>
     @using (Html.BeginForm("Create", "Images", null, FormMethod.Post,
                               new { enctype = "multipart/form-data" }))
     {
         @Html.AntiForgeryToken()
-        @Html.ValidationSummary(true)
         <fieldset>
-            <legend>Image</legend>
             <div class="editor-label">
                 @Html.LabelFor(model => model.ImagePath)
             </div>
             <div class="editor-field">
                 <input id="ImagePath" title="Upload a product image"
                        type="file" name="file" />
+            </div>
+            
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Details, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Details, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Details, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Category, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownListFor(model => model.Category, new SelectList(
+                  new List<Object>{
+                       new { value = "Kids" , text = "Kids"  },
+                       new { value = "Youth Group"  , text = "Youth Group" },
+                       new { value ="Community Groups" , text = "Community Groups"},
+                         new { value = "Sunday Church" , text = "Sunday Church"}
+                         
+                    },
+                  "value",
+                  "text",
+                   2))
+
+
+                    @Html.ValidationMessageFor(model => model.Category, "", new { @class = "text-danger" })
+                </div>
             </div>
             <p><input type="submit" value="Create" /></p>
         </fieldset>
