--- a/CalvaryOpebBibleWebsite/Views/Home/Media.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Home/Media.cshtml
@@ -3,14 +3,12 @@
     ViewBag.Title = "Media";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="jumbotron">
-    <h2>@ViewBag.Title.</h2>
-    <div style=" width:50%; margin-left:25%;">
-        <iframe frameborder="0" width="975" height="800" src="http://www.yourstreamlive.com/embed/iframe/tabs/1719?include_chat=no&include_countdown=yes&countdown_text_color=black&show_powered_by=yes&show_live_event_schedule_link=yes&event_types_on_tabs=no&live_player_width=640&live_viewer_height=480&include_sharing=yes&skin=six" marginheight="0" marginwidth="0" scrolling="auto" allowtransparency="yes" name="tabs" id="tabs"></iframe>
-    </div>
+<div class="jumbotron" style="width:90%; margin-left:5%">
+    <h2 style="margin-left:40%;">Media</h2>
+   
 
 </div>
-
+<div style="width:90%; margin-left:5%">
     <div class=" col-md-4" style="background-color:lightgray; border-style:none;border-bottom-color:lightgray; border-radius: 25px;height:200px;width:30%;margin:1.5%;">
         <h2 style="text-align:center;">Photos</h2>
         <p style="text-align:center;">
@@ -18,7 +16,7 @@
             Check out photos of our congregation and events!
         </p>
         <p style="text-align:center;">
-            <br /><a class="btn btn-default" href="~/Images/Index">Learn more &raquo;</a>
+            <br /><a class="btn btn-default" href="~/Images/Index">Photos &raquo;</a>
         </p>
     </div>
 
@@ -30,7 +28,7 @@
             Watch a live stream of our Sunday Services
         </p>
         <p style="text-align:center;">
-            <br /><a class="btn btn-default" href="~/Pastors/Index">Learn more &raquo;</a>
+            <br /><a class="btn btn-default" href="~/Images/LiveStream">Live Stream &raquo;</a>
         </p>
     </div>
 
@@ -41,8 +39,8 @@
             Watch recordings of our previous services!
         </p>
         <p style="text-align:center;">
-            <br /><a class="btn btn-default" href="~/Pastors/Index">Learn more &raquo;</a>
+            <br /><a class="btn btn-default" href="~/Images/LiveStream">Recorded Video &raquo;</a>
         </p>
     </div>
-
+</div>
 
