--- a/CalvaryOpebBibleWebsite/Views/Images/Index.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Images/Index.cshtml
@@ -16,14 +16,13 @@
 </div>
 
 
-       <div style="width:90%; margin-left:10%">
+       <div style="width:90%; margin-left:10%;">
     @foreach (var item in Model)
     {
        
         <div style="float:left; margin:1%;height:300px; width:300px">
             <a href="@Url.Action("ViewImage","Images", new { id = item.ID})"><img style="max-height:250px; max-width:250px" src="@Url.Content("~/Content/Images/" + System.IO.Path.GetFileName(item.ImagePath))" class="thumbnail" /></a>
-               
-</div>
+               </div>
 
     }
 </div>
