--- a/CalvaryOpebBibleWebsite/Views/Shared/_Layoutnav.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Shared/_Layoutnav.cshtml
@@ -104,7 +104,7 @@
     <div class="container body-content main" style="background-color : transparent;width: 90%;">
         @RenderBody()
         <hr />
-        <footer>
+        <footer style="margin-top:2%;margin-left:75%; color:white;">
             <p>&copy; @DateTime.Now.Year - Calvary Open Bible</p>
         </footer>
     </div>
