--- a/CalvaryOpebBibleWebsite/Views/Beliefs/Create.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Beliefs/Create.cshtml
@@ -12,7 +12,7 @@
     {
         @Html.AntiForgeryToken()
 
-        <div class="form-horizontal">
+        <div class="form-horizontal" style="width:60%;">
             <h4>Belief</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -27,7 +27,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.BeliefDetails, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.BeliefDetails, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.TextAreaFor(model => model.BeliefDetails, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.BeliefDetails, "", new { @class = "text-danger" })
                 </div>
             </div>
