--- a/CalvaryOpebBibleWebsite/Views/Images/Admin.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Images/Admin.cshtml
@@ -18,6 +18,8 @@
                 <td>
                     <img style="max-height:400px; max-width:400px" src="@Url.Content("~/Content/Images/" + System.IO.Path.GetFileName(item.ImagePath))"  />
                 </td>
+                
+                <td>@Html.ActionLink("Edit", "Edit", new { id = item.ID })</td>
                 <td>
                     @Html.ActionLink("Delete", "Delete", new { id = item.ID })
                 </td>
