--- a/CalvaryOpebBibleWebsite/Views/Images/Create.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Images/Create.cshtml
@@ -27,7 +27,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Details, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Details, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.TextAreaFor(model => model.Details, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Details, "", new { @class = "text-danger" })
                 </div>
             </div>
