--- a/CalvaryOpebBibleWebsite/Views/Pastors/Index.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Pastors/Index.cshtml
@@ -6,7 +6,7 @@
 }
 <div class="jumbotron">
     <h2>Pastors</h2>
-    <table class="table">
+    <table class="table" style="width:100%">
       
             
             @foreach (var item in Model)
@@ -23,15 +23,19 @@
     <tr>
         
     </tr>
-                <tr>
-                    <td>
-                        <img style="max-height:300px; max-width:300px" src="@Url.Content("~/Content/Images/" + System.IO.Path.GetFileName(item.PastorImagePath))" />
-                    </td>
-                    <td width="60%">
-                        @Html.DisplayFor(modelItem => item.Details)
-                    </td>
-                </tr>
-                
+    <tr>
+        <td>
+            <img style="max-height:300px; max-width:300px" src="@Url.Content("~/Content/Images/" + System.IO.Path.GetFileName(item.PastorImagePath))" />
+        </td>
+
+        <td style="width:60%;">
+
+            @Html.Raw(item.Details.Replace(Environment.NewLine, "<br/>"))
+                      
+        
+        </td>
+    </tr>
+
             }
 
         </table>
