--- a/CalvaryOpebBibleWebsite/Views/Shared/_Layout.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Shared/_Layout.cshtml
@@ -96,9 +96,10 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
-    <footer style="margin-top:5%;margin-right:1%; float:right; color:white;">
+    <footer style="margin-top:2%;margin-left:75%; color:white;">
         <p>&copy; @DateTime.Now.Year - Calvary Open Bible</p>
     </footer>
+
 </body>
 
 
