--- a/CalvaryOpebBibleWebsite/Views/Event/Details.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Event/Details.cshtml
@@ -4,80 +4,81 @@
     ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<div class="jumbotron" style="width:90%; margin-left:5%; ">
+    <h2>Details</h2>
 
-<h2>Details</h2>
+    <div>
+        <h4>Event</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.EventType)
+            </dt>
 
-<div>
-    <h4>Event</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.EventType)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.EventType)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.EventType)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.EventMinistry)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EventMinistry)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.EventMinistry)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.EventMinistry)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.EventName)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EventName)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.EventName)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.EventName)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.EventLocation)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EventLocation)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.EventLocation)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.EventLocation)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.EventCoordinator)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EventCoordinator)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.EventCoordinator)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.EventCoordinator)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.EventDescription)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EventDescription)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.EventDescription)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.EventDescription)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.StartDate)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.StartDate)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.StartDate)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.StartDate)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.EndDate)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EndDate)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.EndDate)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.EndDate)
-        </dd>
-
-    </dl>
+        </dl>
+    </div>
+    <p>
+        @Html.ActionLink("Edit", "Edit", new { id = Model.EventID }) |
+        @Html.ActionLink("Back to List", "Admin")
+    </p>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.EventID }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
