--- a/CalvaryOpebBibleWebsite/Views/Event/Delete.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Event/Delete.cshtml
@@ -4,86 +4,88 @@
     ViewBag.Title = "Delete";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<div class="jumbotron" style="width:90%; margin-left:5%; ">
+    <h2>Delete</h2>
 
-<h2>Delete</h2>
+    <h3>Are you sure you want to delete this?</h3>
+    <div>
+        <h4>Event</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.EventType)
+            </dt>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Event</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.EventType)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.EventType)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.EventType)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.EventMinistry)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EventMinistry)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.EventMinistry)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.EventMinistry)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.EventName)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EventName)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.EventName)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.EventName)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.EventLocation)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EventLocation)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.EventLocation)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.EventLocation)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.EventCoordinator)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EventCoordinator)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.EventCoordinator)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.EventCoordinator)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.EventDescription)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EventDescription)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.EventDescription)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.EventDescription)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.StartDate)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.StartDate)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.StartDate)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.StartDate)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.EndDate)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EndDate)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.EndDate)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.EndDate)
-        </dd>
+        </dl>
 
-    </dl>
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
+            <div class="form-actions no-color">
+                <input type="submit" value="Delete" class="btn btn-default" /> |
+                @Html.ActionLink("Back to List", "Admin")
+            </div>
+        }
+    </div>
 </div>
